# llm-notes

./: 2023-05-11_openapi_explore.ipynb  2023-05-31_langchain_explore.ipynb  2023-07-04_guidance_explore.ipynb  2023-07_04_tagger_dev.ipynb  README.md  pyproject.toml
example_notes/: A Gentle Introduction to Graph Neural Networks.md  Balance between improv and prior scene in roleplay.md  Death Moves.md  GCN graph convolution layers.md  GNN 2020 review and into 2021.md  Gaussian belief propagation.md  Graph neural network (GNN) Introduction.md  How the Nemesis system creates stories.md  Loaded Questions with details.md  Obsidian.md  Preparing to improv in rpgs.md  Sketch improv is working backward to build a larger worldview.md  Story responsibility for players over just Character responsibility.md  The Church of Interruption.md  What is zettelkasten.md  central party figure as a shared npc.md  distil - pub.md  factor graph used for prababilistic inference.md  give vs take conversation styles and conversational doorknobs.md  improv theatre as a storytelling framework.md  meaningful spellcasting and the action economy.md  obsidian website with mkdocs.md  relational note taking.md
llm_notes/: note.py
